--- a/client/sass/_menu-mobile.scss
+++ b/client/sass/_menu-mobile.scss
@@ -25,7 +25,7 @@
 	}
 
 	&__search-wrapper {
-		background: rgb(41, 77, 234);
+		background: rgb(254,148,103);
 		display: flex;
 		align-items: center;
 		flex-direction: row;
